[dependencies]
array-bytes = '4.1'
fs_extra = '1'
hash-db = '0.15.2'
kvdb = '0.11.0'
kvdb-rocksdb = '0.15.1'
lazy_static = '1.4.0'
log = '0.4.17'
serde = '1.0.136'
serde_json = '1.0.85'
tempfile = '3.1.0'

[dependencies.clap]
features = ['derive']
version = '3.1.18'

[dependencies.derive_more]
default-features = false
features = ['display']
version = '0.99.17'

[dependencies.futures]
features = ['thread-pool']
version = '0.3.21'

[dependencies.kitchensink-runtime]
path = '../runtime'
version = '3.0.0-dev'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.node-testing]
path = '../testing'
version = '3.0.0-dev'

[dependencies.parity-db]
version = '0.3'

[dependencies.parity-util-mem]
default-features = false
features = ['primitive-types']
version = '0.11.0'

[dependencies.rand]
features = ['small_rng']
version = '0.7.2'

[dependencies.sc-basic-authorship]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sc-client-api]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sc-transaction-pool]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sc-transaction-pool-api]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-consensus]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sp-core]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-inherents]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-runtime]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-state-machine]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.12.0'

[dependencies.sp-timestamp]
branch = 'polkadot-v0.9.30'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-tracing]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '5.0.0'

[dependencies.sp-trie]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate node integration benchmarks.'
edition = '2021'
homepage = 'https://substrate.io'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
name = 'node-bench'
repository = 'https://github.com/paritytech/substrate/'
version = '0.9.0-dev'
