[features]
stress-test = []
wasmtime = ['sc-executor/wasmtime']
[dependencies.codec]
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.appchain-barnacle-runtime]
path = '../runtime'
version = '0.9.30'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.sc-executor]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.scale-info]
features = ['derive']
version = '2.1.1'

[dependencies.sp-core]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-keystore]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.12.0'

[dependencies.sp-state-machine]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.12.0'

[dependencies.sp-tracing]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '5.0.0'

[dependencies.sp-trie]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Substrate node implementation in Rust.'
edition = '2021'
homepage = 'https://substrate.io'
license = 'Apache-2.0'
name = 'node-executor'
repository = 'https://github.com/paritytech/substrate/'
version = '0.9.30'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
criterion = '0.3.0'
futures = '0.3.21'
wat = '1.0'

[dev-dependencies.frame-support]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.frame-system]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-balances]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-contracts]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-im-online]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-sudo]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-timestamp]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-transaction-payment]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.pallet-treasury]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.sp-application-crypto]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dev-dependencies.sp-consensus-babe]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dev-dependencies.sp-externalities]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.12.0'

[dev-dependencies.sp-keyring]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dev-dependencies.sp-runtime]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'
